5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1573_1333.log
== TEST (2019-03-11 15:47:14) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:47:32) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:47:34) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.142557
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
